tests/fails/src/main/resources/META-INF/spring.factories
slim.Module=\
lib.enable.BarConfigurationModule

foo.bar.Spam=\
One,\
Two